--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ padding:20px;
     background-color: rgb(237,237,237);
     width:60%;
     margin:0 10rem;
+    padding:30px;
 
 }
 
@@ -228,7 +229,7 @@ border:rgb(145, 144, 144) solid 0.01rem;
 }
 
 .sub-main{
-    background-color:rgb(10,49,88) ;
+    background-color:rgba(10, 49, 88, 0.747) ;
     height:50px;
 }
 
@@ -252,7 +253,17 @@ border:rgb(145, 144, 144) solid 0.01rem;
 
  .imageDescription h2{
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     margin: 10px 5px;
+     color:rgba(34, 33, 33, 0.76) ;
+     color:rgba(34, 33, 33, 0.76);
+ }
+
+ .price {
+    color:rgba(34, 33, 33, 0.801);
+ }
+
+ #imageSmalll{
+   margin-left: 10%;
+   padding:20px;
  }
 
 
@@ -261,16 +272,34 @@ border:rgb(145, 144, 144) solid 0.01rem;
      font-weight: bold;
      margin-left: 5px;
  }
+
+ .description{
+     text-align: center;
+     padding:25px;
+ } 
+
+.subTotal{
+     text-align: center;
+     padding:30px;
+ } 
+
+ .checkOut{
+    text-align: center;
+ }
+
+
  .fas{
      cursor: pointer;
  }
 
  .checkOut a{
-     padding:10px;
+     padding:15px;
      margin-top: 30px;
      text-decoration: none;
-     color: black;
+     color: whitesmoke;
      background-color: rgb(247, 59, 59);
+     border:none;
+     border-radius: 5px;
  }
 
  #button1{
@@ -326,8 +355,13 @@ border:rgb(145, 144, 144) solid 0.01rem;
 
    .cart-item{
        text-align: center;
-      
+             
    }
+
+   .cart-item1 table{
+       text-align: center;
+   }
+
    .cart-right{
        margin-left: 20%;
        text-align: center;
